<resources>
    <string name="app_name">Contacts</string>

    <string name="add_person">Add Person</string>
    <string name="contacts">Contacts</string>
    <string name="contact_name">Name</string>
    <string name="contact_phone">Phone</string>
    <string name="contact_note">Note</string>
    <string name="add_contact">Add Contact</string>
    <string name="update_contact">Update Contact</string>
    <string name="call">Call</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
